-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u292, 11, 13
-
Component/s: hotspot
-
b16
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256601 | 11.0.11-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8230205 | 11.0.5 | Andrew Haley | P4 | Resolved | Fixed | b05 |
According to the Arm manual, except in a few limited cases it is not safe to modify code while it is being executed. We mostly get this right, but our CompiledStaticCall stubs are patched at runtime by rewriting immediate loads. We can fix this by moving the rewritable data fields into memory so that they are loaded by means of load(mem) rather than mov(immediate data).
- backported by
-
JDK-8230205 AArch64: Compiled CI stubs are unsafely modified
-
- Resolved
-
-
JDK-8256601 AArch64: Compiled CI stubs are unsafely modified
-
- Resolved
-