8219993: AArch64: Compiled CI stubs are unsafely modified

Reviewed-by: adinn